    Use `__diag__.warn_multiple_tokens_in_named_alternation`
    to help identify those expressions in your parsers that
    will have changed as a result.

- Removed support for running `python setup.py test`. The setuptools
  maintainers consider the test command deprecated (see
  <https://github.com/pypa/setuptools/issues/1684>). To run the Pyparsing test,
  use the command `tox`.

- POTENTIAL API CHANGE:
  ZeroOrMore expressions that have results names will now
  include empty lists for their name if no matches are found.
  Previously, no named result would be present. Code that tested
  for the presence of any expressions using "if name in results:"
  will now always return True. This code will need to change to
  "if name in results and results[name]:" or just
  "if results[name]:". Also, any parser unit tests that check the
  asDict() contents will now see additional entries for parsers
  having named ZeroOrMore expressions, whose values will be `[]`.

- POTENTIAL API CHANGE:
  Fixed a bug in which calls to ParserElement.setDefaultWhitespaceChars
  did not change whitespace definitions on any pyparsing built-in
  expressions defined at import time (such as quotedString, or those
  defined in pyparsing_common). This would lead to confusion when
  built-in expressions would not use updated default whitespace
  characters. Now a call to ParserElement.setDefaultWhitespaceChars
  will also go and update all pyparsing built-ins to use the new
  default whitespace characters. (Note that this will only modify
  expressions defined within the pyparsing module.) Prompted by
  work on a StackOverflow question posted by jtiai.

- Expanded __diag__ and __compat__ to actual classes instead of
  just namespaces, to add some helpful behavior:
  - enable() and .disable() methods to give extra
    help when setting or clearing flags (detects invalid
    flag names, detects when trying to set a __compat__ flag
    that is no longer settable). Use these methods now to